--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -11,11 +11,13 @@
 </head>
 
 <body>
-    <header>
-        <span>Techium</span>
-        <nav></nav>
-    </header>
-
+    <div>
+        <header>
+            <span>Techium</span>
+            <nav></nav>
+        </header>
+    </div>
+    
     <main>
         <h1>Homepage</h1>
         <section>
