--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -149,17 +149,20 @@
                 </header>
                 <div>
                     <article>
-                        <blockquote cite="Yuri Y.">I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
+                        <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
                     </article>
+                    <cite>Yuri Y.</cite>
                     <article>
-                        <blockquote cite="Dorrie S.">
+                        <blockquote>
                             Thank you so much for your help. Techium company is awesome!
                         </blockquote>
+                        <cite>Dorrie S.</cite>
                     </article>
                     <article>
-                        <blockquote cite="Sven H.">
+                        <blockquote>
                             I love your system. Definitely worth the investment. I'd be lost without Techium company.
                         </blockquote>
+                        <cite>Sven H.</cite>
                     </article>
                 </div>
             </div>
