Address and latest news authors

--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -121,7 +121,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
                         </p>
-                        <p style="font-size: small">By Kelly D.</p>
+                        <small>By Kelly D.</small>
                     </article>
                     <article>
                         <p>Digital Life</p>
@@ -129,7 +129,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?
                         </p>
-                        <p style="font-size: small">By William A.</p>
+                        <small>By William A.</small>
                     </article>
                     <article>
                         <p>Social</p>
@@ -137,7 +137,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
                         </p>
-                        <p style="font-size: small">By Frances J.</p>
+                        <small>By Frances J.</small>
                     </article>
                 </div>
             </div>
@@ -201,8 +201,7 @@
     <!-- Footer -->
     <footer>
         <address>
-            <p>234 Washington Street</p>
-            <p>Urbana, Illinois</p>
+            234 Washington Street<br>Urbana, Illinois
         </address>
         <div>
             <ul>
