--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -125,26 +125,30 @@
 
             <table>
                 <caption>Star Wars Trilogy Data</caption>
-                <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Director</th>
-                    <th scope="col">Release Date</th>
-                </tr>
-                <tr>
-                    <th scope="row">Star wars: Episode IV - A New Hope</th>
-                    <td>George Lucas</td>
-                    <td>May 25th, 1977</td>
-                </tr>
-                <tr>
-                    <th scope="row">Star wars: Episode V - The Empire Srikes Back</th>
-                    <td>Irvin Kershner</td>
-                    <td>May 21st, 1980</td>
-                </tr>
-                <tr>
-                    <th scope="row">Star wars: Episode VI - Return of the Jedi</th>
-                    <td>Richard Marquand</td>
-                    <td>May 25th, 1983</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Director</th>
+                        <th scope="col">Release Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Star wars: Episode IV - A New Hope</th>
+                        <td>George Lucas</td>
+                        <td>May 25th, 1977</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Star wars: Episode V - The Empire Srikes Back</th>
+                        <td>Irvin Kershner</td>
+                        <td>May 21st, 1980</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Star wars: Episode VI - Return of the Jedi</th>
+                        <td>Richard Marquand</td>
+                        <td>May 25th, 1983</td>
+                    </tr>
+                </tbody>
             </table>
         </section>
     </main>
