--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -115,12 +115,11 @@
                 <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
             </div>
         </section>
+
         <!-- Table -->
         <section>
             <header>
-                <h2>
-                    Table
-                </h2>
+                <h2>Table</h2>
             </header>
 
             <table>
@@ -134,17 +133,17 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">Star wars: Episode IV - A New Hope</th>
+                        <th scope="row">Star Wars: Episode IV - A New Hope</th>
                         <td>George Lucas</td>
                         <td>May 25th, 1977</td>
                     </tr>
                     <tr>
-                        <th scope="row">Star wars: Episode V - The Empire Srikes Back</th>
+                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
                         <td>Irvin Kershner</td>
                         <td>May 21st, 1980</td>
                     </tr>
                     <tr>
-                        <th scope="row">Star wars: Episode VI - Return of the Jedi</th>
+                        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
                         <td>Richard Marquand</td>
                         <td>May 25th, 1983</td>
                     </tr>
