--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -172,7 +172,7 @@
                 </header>
                 <div>
                     <article>
-                        <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
+                        <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width=100px height=100px>
                         
                         <blockquote>
                             <p>
@@ -183,7 +183,7 @@
                     </article>
 
                     <article>
-                        <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
+                        <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width=100px height=100px>
                         <blockquote>
                             <p>
                                 Thank you so much for your help. Techium company is awesome!
@@ -193,7 +193,7 @@
                     </article>
                     
                     <article>
-                        <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
+                        <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width=100px height=100px>
                         <blockquote>
                             <p>
                                 I love your system. Definitely worth the investment. I'd be lost without Techium company.
