--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -177,7 +177,7 @@
             <header>
                 <h2>Video</h2>
             </header>
-            <video controls="controls" loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg" width="320" height="240">
+            <video controls loop="true" poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg" width="320" height="240">
                 <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
                 Sorry, your browser doesn't support HTML5 video
             </video>
