Add a video player in the styleguide

--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -178,7 +178,7 @@
                 <h2>Video</h2>
             </header>
             <video controls loop="true" poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg" width="320" height="240">
-                <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
+                <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4">
                 Sorry, your browser doesn't support HTML5 video
             </video>
         </section>
